# CPLUSnET

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Base/: Tensor.hpp  Tensor.md  TyNET.hpp  ref.md
include/Core/: Device.hpp  TypeMeta.hpp
include/Functional/: Activations.hpp  BackProp.hpp  ForwardProp.hpp  Loss.hpp  Padding.hpp  Pooling.hpp
include/NN/: Conv.hpp  Layer.hpp  Linear.hpp  Network.hpp  README.md
include/TensorImpl/: Tensor.hpp  TensorBase.hpp  TensorImpl.hpp
src/Base/: TyNET.cpp
src/Functional/: Activations.cpp  BackProp.cpp  ForwardProp.cpp  Loss.cpp
src/NN/: Layer.cpp  Linear.cpp  Network.cpp
tests/: CMakeLists.txt  helloWorldTest.cpp
